# testcobol

./: .gitignore  README.md
docs/: BRD-FRD-Validation-Report.md  Brd.md  Frd.md  README.md  VALIDATION-SUMMARY.md  dashboard-compliance.md
docs/rules/: business-process-overview.md  business-rules-summary.md  decision-logic-business-rules.md  inputs-outputs.md
node-accounting-app/: package-lock.json  package.json
python-accounting-app/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION-SUMMARY.md  Makefile  README.md  env.example  pyproject.toml  requirements.txt  run.py
python-accounting-app/src/accounting/: __init__.py
python-accounting-app/src/accounting/api/: __init__.py  app.py  endpoints.py  frontend.py  main.py
python-accounting-app/src/accounting/business_rules/: __init__.py  business_rules.py  validation_rules.py
python-accounting-app/src/accounting/domain/: __init__.py  models.py
python-accounting-app/src/accounting/infrastructure/: __init__.py  config.py  database.py  repository.py
python-accounting-app/tests/: __init__.py  conftest.py
python-accounting-app/tests/parity/: test_cobol_parity.py
python-accounting-app/tests/unit/: test_business_rules.py  test_validation_rules.py
